--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,8 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
+/MyTunes/nbproject/private/
+
+# Local DB
+/MyTunes/localDB/
+/JavaFXPreloader/nbproject/private/
