--- a/.gitignore
+++ b/.gitignore
@@ -93,5 +93,5 @@ $RECYCLE.BIN/
 
 
 #encrption jar
-!/StudentClient/lib/jasypt-1.9.2.jar
-!/StudentClient/libjasypt-1.9.2.jar
+!/StudentClient/lib/*
+!/StudentClient/lib/*
