Made shared library

--- a/TeacherClient/nbproject/project.properties
+++ b/TeacherClient/nbproject/project.properties
@@ -34,7 +34,8 @@ includes=**
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
-    ${javafx.classpath.extension}
+    ${javafx.classpath.extension}:\
+    ${reference.SharedClasses.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -111,6 +112,8 @@ meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 native.bundling.enabled=false
 platform.active=default_platform
+project.SharedClasses=../SharedClasses
+reference.SharedClasses.jar=${project.SharedClasses}/dist/SharedClasses.jar
 run.classpath=\
     ${dist.jar}:\
     ${javac.classpath}:\
