--- a/StudentClient/nbproject/project.properties
+++ b/StudentClient/nbproject/project.properties
@@ -30,14 +30,13 @@ dist.jar=${dist.dir}/StudentClient.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.jasypt-1.9.2.jar=lib/jasypt-1.9.2.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${file.reference.jasypt-1.9.2.jar}
+    ${reference.SharedClasses.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -103,6 +102,8 @@ manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 platform.active=default_platform
+project.SharedClasses=../SharedClasses
+reference.SharedClasses.jar=${project.SharedClasses}/dist/SharedClasses.jar
 run.classpath=\
     ${dist.jar}:\
     ${javac.classpath}:\
