fixed imports and failed merge

--- a/.gitignore
+++ b/.gitignore
@@ -88,6 +88,7 @@ $RECYCLE.BIN/
 # Local DB
 /MyTunes/localDB/
 /JavaFXPreloader/nbproject/private/
+/SharedClasses/nbproject/private/
 /StudentClient/nbproject/private/
 /TeacherClient/nbproject/private/
 
@@ -95,3 +96,4 @@ $RECYCLE.BIN/
 #encrption jar
 !/StudentClient/lib/*
 !/StudentClient/lib/*
+/SharedClasses/nbproject/private/
