--- a/StudentClient/nbproject/project.properties
+++ b/StudentClient/nbproject/project.properties
@@ -40,7 +40,8 @@ jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-<<<<<<< HEAD
+    <<<<<<< HEAD:\
+    ${reference.SharedClasses.jar}
     ${reference.SharedClasses.jar}
 =======
     ${file.reference.jasypt-1.9.2.jar}:\
