--- a/SharedClasses/nbproject/project.properties
+++ b/SharedClasses/nbproject/project.properties
@@ -28,10 +28,12 @@ dist.jar=${dist.dir}/SharedClasses.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.jasypt-1.9.2.jar=lib\\jasypt-1.9.2.jar
+file.reference.mssql-jdbc-6.2.2.jre8.jar=lib\\mssql-jdbc-6.2.2.jre8.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jasypt-1.9.2.jar}
+    ${file.reference.jasypt-1.9.2.jar}:\
+    ${file.reference.mssql-jdbc-6.2.2.jre8.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
