--- a/TeacherClient/nbproject/project.properties
+++ b/TeacherClient/nbproject/project.properties
@@ -29,15 +29,13 @@ dist.jar=${dist.dir}/TeacherClient.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.mssql-jdbc-6.2.2.jre8.jar=..\\SharedClasses\\lib\\mssql-jdbc-6.2.2.jre8.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${reference.SharedClasses.jar}:\
-    ${file.reference.mssql-jdbc-6.2.2.jre8.jar}
+    ${reference.SharedClasses.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
